WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291904
REGRESSION(
293851@main):[iOS
MacOS Debug] ASSERTION FAILED: !layer || !layer->hasAncestor in fast/css/view-transitions-hide-under-page-background-color.html (flaky in EWS)
https://bugs.webkit.org/show_bug.cgi?id=291904
Summary
REGRESSION(293851@main):[iOS MacOS Debug] ASSERTION FAILED: !layer || !layer-...
Marta Darbinyan
Reported
2025-04-22 11:12:38 PDT
There is an assertion failure in MacOS Debug queue. Failed test: fast/css/view-transitions-hide-under-page-background-color.html ASSERTION FAILED: !layer || !layer->hasAncestor(this) /Volumes/Data/worker/macOS-Sequoia-Debug-Build-EWS/build/Source/WebCore/platform/graphics/GraphicsLayer.cpp(291) : void WebCore::GraphicsLayer::setParent(GraphicsLayer *) 1 0x30645c544 WebCore::GraphicsLayer::setParent(WebCore::GraphicsLayer*) 2 0x30645ca8c WebCore::GraphicsLayer::addChild(WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>&&) 3 0x3065a742c WebCore::GraphicsLayerCA::addChild(WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>&&) 4 0x30645c8b0 WebCore::GraphicsLayer::setChildren(WTF::Vector<WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) 5 0x3065a73cc WebCore::GraphicsLayerCA::setChildren(WTF::Vector<WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) 6 0x306d1366c WebCore::RenderLayerCompositor::updateBackingAndHierarchy(WebCore::RenderLayer&, WTF::Vector<WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WebCore::RenderLayerCompositor::UpdateBackingTraversalState&, WebCore::ScrollingTreeState&, WTF::OptionSet<WebCore::RenderLayerCompositor::UpdateLevel>) 7 0x306d0febc WebCore::RenderLayerCompositor::updateCompositingLayers(WebCore::CompositingUpdateType, WebCore::RenderLayer*) 8 0x306d0f174 WebCore::RenderLayerCompositor::didRecalcStyleWithNoPendingLayout() 9 0x305e487dc WebCore::LocalFrameViewLayoutContext::updateCompositingLayersAfterStyleChange() 10 0x304bcf984 WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) 11 0x304bd0538 WebCore::Document::updateStyleIfNeeded() 12 0x304bd095c WebCore::Document::updateLayout(WTF::OptionSet<WebCore::LayoutOptions>, WebCore::Element const*) 13 0x305e40ad0 WebCore::LocalFrameView::updateLayoutAndStyleIfNeededRecursive(WTF::OptionSet<WebCore::LayoutOptions>) 14 0x305eb7d14 WebCore::Page::layoutIfNeeded(WTF::OptionSet<WebCore::LayoutOptions>) 15 0x305eb8a08 WebCore::Page::updateRendering() 16 0x1193cdaf4 WebKit::WebPage::updateRendering() 17 0x11601c730 WebKit::RemoteLayerTreeDrawingArea::updateRendering() 18 0x116023ae0 WebCore::Timer::Timer<WebKit::RemoteLayerTreeDrawingArea, WebKit::RemoteLayerTreeDrawingArea>(WebKit::RemoteLayerTreeDrawingArea&, void (WebKit::RemoteLayerTreeDrawingArea::*)())::'lambda'()::operator()() const 19 0x116023a18 WTF::Detail::CallableWrapper<WebCore::Timer::Timer<WebKit::RemoteLayerTreeDrawingArea, WebKit::RemoteLayerTreeDrawingArea>(WebKit::RemoteLayerTreeDrawingArea&, void (WebKit::RemoteLayerTreeDrawingArea::*)())::'lambda'(), void>::call() 20 0x115767190 WTF::Function<void ()>::operator()() const 21 0x116021d20 WebCore::Timer::fired() 22 0x3061ce42c WebCore::ThreadTimers::sharedTimerFiredInternal() 23 0x3061d8338 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 24 0x3061d82e4 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 25 0x3000341a8 WTF::Function<void ()>::operator()() const 26 0x306174eb8 WebCore::MainThreadSharedTimer::fired() 27 0x3062eb63c WebCore::timerFired(__CFRunLoopTimer*, void*) 28 0x18f276394 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 29 0x18f276038 __CFRunLoopDoTimer 30 0x18f275b48 __CFRunLoopDoTimers 31 0x18f25b530 __CFRunLoopRun com.apple.WebKit.WebContent.Development terminated (pid 5829) for reason: crash LEAK: 1 WebPageProxy Test history:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fcss%2Fview-transitions-hide-under-page-background-color.html&style=debug&architecture=arm64
Test result:
https://ews-build.webkit.org/#/builders/122/builds/20077
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-22 11:13:10 PDT
<
rdar://problem/149783892
>
EWS
Comment 2
2025-04-22 13:12:57 PDT
Test gardening commit
293972@main
(36ff5a9a7fff): <
https://commits.webkit.org/293972@main
> Reviewed commits have been landed. Closing PR #44377 and removing active labels.
Matt Woodrow
Comment 3
2025-04-22 19:29:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44400
EWS
Comment 4
2025-04-23 16:04:01 PDT
Committed
294027@main
(497b138d4b4d): <
https://commits.webkit.org/294027@main
> Reviewed commits have been landed. Closing PR #44400 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug