REGRESSION(293851@main):[iOS MacOS Debug] ASSERTION FAILED: !layer || !layer->hasAncestor in fast/css/view-transitions-hide-under-page-background-color.html https://bugs.webkit.org/show_bug.cgi?id=291904 <rdar://149783892>

Reviewed by Tim Nguyen.

Ensure styles get flushed at the end of setupTransitionPseudoElements, since we
need those elements to exist for the next step. This is a repeat of 278608@main
(and fixes the same test).

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::setupTransitionPseudoElements):

Canonical link: https://commits.webkit.org/294027@main